--- a/e-commerce/src/Component/home.css
+++ b/e-commerce/src/Component/home.css
@@ -7,25 +7,28 @@ nav {
   overflow: hidden;
   width: 100%;
   color: #000;
-  background-color: yellow;
+  background-color: rgb(19, 25, 33);
   border-radius: 3px;
 }
 nav h1 {
   margin: 10px;
   padding: 5px;
+  color: #fff;
 }
 ul {
   display: inline-flex;
   text-decoration: none;
-  margin: 10px;
+  margin: 5px;
   padding: 5px;
 }
 ul li {
-  margin: 5px 30px;
+  margin: 5px 20px;
   text-decoration: none;
   list-style: none;
   cursor: pointer;
+  color: #fff;
   text-transform: uppercase;
+  font-size: small;
   text-align: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
