--- a/e-commerce/src/Component/Format.jsx/Format.css
+++ b/e-commerce/src/Component/Format.jsx/Format.css
@@ -1,10 +1,12 @@
 .containe {
   display: grid;
   grid-template-rows: repeat(auto 300px);
-  grid-template-columns: 300px 300px 300px;
-  column-gap: 160px;
+  grid-template-columns: 450px 430px 400px;
+  column-gap: 10px;
+
   padding: 10px;
-  margin-left: 30px;
+  margin-left: 10%;
+
   padding-top: 60px;
 }
 .contai {
@@ -17,7 +19,7 @@
   justify-content: flex-start;
   width: 450px;
   height: 400px;
-  border: 1px solid green;
+  border: 1px solid rgb(231, 247, 231);
   border-radius: 10px;
   gap: 20px;
 }
