--- a/e-commerce/src/Component/Maincontainer.css
+++ b/e-commerce/src/Component/Maincontainer.css
@@ -1,6 +1,10 @@
 .btncard {
   margin: 5px;
+  /* position: relative; */
   padding: 5px;
+  margin-left: 30%;
+  margin-top: 10%;
+  bottom: 0;
 }
 .addbtn {
   width: 90px;
@@ -11,8 +15,8 @@
   text-align: center;
   align-items: center;
   border: none;
-  color: #f5f5f5;
-  background-color: rgb(24, 179, 24);
+  color: #18b318;
+  border: 1px solid #18b318;
 }
 
 .buybtn {
@@ -24,15 +28,15 @@
   text-align: center;
   /* align-items: center; */
   border: none;
-  color: #f5f5f5;
-  background-color: rgb(186, 105, 13);
+  color: #e78080;
+  border: 1px solid rgb(186, 105, 13);
 }
 
 .mainpagevalue .booklist {
   width: 100px;
   height: 40px;
   /* position: fixed; */
-  margin-left: 5%;
+  margin-left: 9%;
   top: 0;
   margin-top: 1%;
   background-color: rgb(240, 15, 15);
@@ -55,4 +59,54 @@
 .childboxcontainer button {
   padding: 10px;
   margin-left: 30%;
+}
+
+/* nav video game */
+.navvideogame {
+  display: flex;
+  margin: 10px;
+  justify-content: space-between;
+  padding: 20px;
+  width: 100vw;
+  height: 30vh;
+}
+.demo2 {
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  justify-content: space-between;
+}
+.demo2 .demo2-01 {
+  width: 50%;
+  display: flex;
+}
+.demo2 .demo2-02 {
+  width: 50%;
+  display: flex;
+}
+.demo2 img {
+  height: 25vh;
+}
+.demofeatured {
+  margin: 20px;
+  padding: 20px;
+}
+.demofeatured h1 {
+  margin: 10px;
+}
+.navvideogame img {
+  padding: 10px;
+  margin-right: 10%;
+}
+
+.paginationbtn {
+  width: 70px;
+  height: 40px;
+  border: none;
+  outline: none;
+  margin: 10px;
+  border-radius: 12px;
+  background-color: #18b318;
+  color: #f5f5f5;
+  text-align: center;
 }
