--- a/e-commerce/src/Component/Details.css
+++ b/e-commerce/src/Component/Details.css
@@ -35,3 +35,104 @@
   padding: 10px;
   background-color: #f5f5f5;
 }
+.contactpage {
+  width: 100%;
+  height: 60vh;
+  /* background-color: red; */
+  display: flex;
+  padding: 10px;
+}
+.contactpage .contactpart01 {
+  width: 50%;
+  height: 100%;
+  text-align: start;
+  /* background-color: #f5f5f5; */
+  /* margin: 10px; */
+  padding: 25px;
+}
+.contactpart01 .spnaspace {
+  margin-left: 10px;
+}
+.contactpage .contactpart02 {
+  width: 45%;
+  height: 100%;
+  /* background-color: rgb(162, 162, 225); */
+}
+.contactdetails {
+  width: 95%;
+  height: 80vh;
+  /* background-color: #f5f5f5; */
+  border: 1px solid rgb(171, 171, 171);
+  /* position: relative; */
+  margin-bottom: 40px;
+  margin-left: 2.5%;
+  display: flex;
+}
+.contactdetails01 {
+  width: 70%;
+  height: 100%;
+  text-align: start;
+  margin: 20px;
+  padding: 20px;
+}
+
+.inputboxfield {
+  display: flex;
+  flex-direction: column;
+}
+.inputboxfield input {
+  width: 80%;
+  margin-top: 15px;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid rgb(192, 189, 189);
+  outline: none;
+}
+textarea {
+  width: 80%;
+  margin-top: 15px;
+  height: 30vh;
+  padding: 10px;
+  border: 1px solid rgb(192, 189, 189);
+  outline: none;
+}
+.inputboxfield button {
+  width: 120px;
+  margin-top: 15px;
+  height: 45px;
+  text-align: center;
+  border: none;
+  outline: none;
+  background-color: #088178;
+  color: #f5f5f5;
+  border-radius: 12px;
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.contactdetails02 {
+  margin-top: 5%;
+}
+.contactdetails02 .imgtag {
+  width: 55px;
+  height: 55px;
+  background-color: rgb(157, 153, 153);
+  border-radius: 50%;
+}
+.contactdetails02 ul {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5%;
+}
+.contactdetails02 ul li {
+  list-style: none;
+  display: flex;
+}
+.contactdetails02 h5 {
+  margin-left: 7%;
+}
+
+.devdetails {
+  text-align: start;
+  line-height: 1px;
+}
