--- a/e-commerce/src/Component/Maincontainer.css
+++ b/e-commerce/src/Component/Maincontainer.css
@@ -48,6 +48,7 @@
 .boxcontainer {
   display: flex;
   padding: 10px;
+  background-color: #f5f5f5;
 }
 .boxcontainer img {
   padding: 10px;
@@ -109,4 +110,13 @@
   background-color: #18b318;
   color: #f5f5f5;
   text-align: center;
+}
+
+.cardmaincontainer {
+  border: 0.5px solid rgb(41, 164, 240);
+}
+
+.selectdata {
+  margin-top: 1%;
+  width: 400px;
 }
