--- a/e-commerce/src/Component/home.css
+++ b/e-commerce/src/Component/home.css
@@ -8,7 +8,8 @@ nav {
   width: 100%;
   color: #000;
 
-  background-color: rgb(228, 137, 2);
+  /* background-color: rgb(228, 137, 2); */
+  background-color: #f2f2f2;
   border-radius: 3px;
 }
 nav h4 {
@@ -53,4 +54,7 @@ nav ul button {
 }
 .actualdata {
   margin-bottom: 20px;
+}
+.inpuboxfield input {
+  width: 300px;
 }
